<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Your Choice</string>
    <string name="action_settings">Settings</string>
	<string name="please_input">请输入……</string>
	<string name="confirm">确定</string>
	<string name="ToRight">ToRight</string>
	<string name="ToLeft">ToLeft</string>
	<string name="add">+</string>
	<string name="first_page">first page</string>
	<string name="second_page">second page</string>
	<string name="LOGIN">LOGIN</string>
	
</resources>
