<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >   
     
     <ImageView
        android:id="@+id/addimg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        android:src="@drawable/option"
		/>
    
    <EditText   
        android:id="@+id/edittext"
	    android:layout_width="match_parent"  
	    android:layout_height="36dip"   
 	   	android:padding="5dip"  
    	android:layout_marginTop="36dip"  
    	android:textColorHint="#AAAAAA"  
    	android:textSize="15sp"  
    	android:singleLine="true"  
    	android:hint="@string/please_input"  
	/> 

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_marginTop="390dp"
		android:layout_centerHorizontal="true"
		android:background="#00000000"
		android:textColor="#ffffff"
		android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm" 
        />

</RelativeLayout>
