<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage" >

    <View
        android:id="@+id/leftline"
        android:layout_alignParentRight="true"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        />
    <RelativeLayout 
        android:id="@+id/menuPic"
        android:layout_width="match_parent"
        android:layout_height="48dp"
       	android:background="@drawable/menu">
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_centerInParent="true"
       	    android:text="YOUR CHOICE" 
       	    android:textColor="#ffffff"
       	    android:textSize="20dp"/>
    
	<ImageButton
        android:id="@+id/addButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/add"
        android:src="@drawable/addbutton"
        android:layout_alignParentRight="true" 
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"/>
    
    <ImageButton
        android:id="@+id/setButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/add"
        android:src="@drawable/setbutton" />
    
    </RelativeLayout>
	
    <ImageView
	    android:id="@+id/naviPic"
	    android:scaleType="fitXY"
	    android:layout_width="fill_parent"
	    android:layout_height="48dp"
	    android:layout_alignParentBottom="true"
	    android:contentDescription="@string/app_name"
	    android:src="@drawable/navigation" />
  
	<ImageButton
        android:id="@+id/buttonToRight"
        android:layout_alignTop="@id/naviPic"
        android:layout_alignRight="@id/leftline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/ToRight"
        android:src="@drawable/toright" />
    
    <ImageButton
        android:id="@+id/buttonToLeft"
		android:layout_alignTop="@id/naviPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:contentDescription="@string/ToLeft" 
        android:src="@drawable/toleft"
    	/>
    
    
    <RelativeLayout
        android:id="@+id/action"
        android:layout_below="@+id/menuPic" 
        android:layout_above="@id/naviPic"
        android:layout_width="match_parent"
       	android:layout_height="match_parent"
        />

</RelativeLayout>
